# FloatChat

./: Gemini CLI  README.md  cloudfront-config.json  cloudtrail-policy.json  deploy_batch_1.sh  deploy_batch_2.sh  deploy_batch_3.sh  deploy_batch_4.sh  frontend-policy.json  gw-response.json  next.config.mjs  package-lock.json  package.json  response.json  test_cors.py  test_lambda.json  test_lambda_apigw.json  test_lambda_apigw_valid.json  test_lambda_payload.json  test_lambda_v1.json  test_lambda_v2.json
docs/: DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_STEPS.md
server/: Dockerfile  main.py  pyproject.toml  requirements.txt  smaller-nc.py  smaller_dataset.nc  test_payload.py
server/app/: ai_core.py  aws_services.py  database.py  processing.py  visualizations.py
src/app/: layout.tsx
src/app/chat/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/app/upload/: page.tsx
src/components/: ConfigureAmplify.tsx
src/contexts/: auth-context.tsx
