[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "folium>=0.20.0",
    "mangum>=0.21.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.41.0",
    "xarray>=2026.2.0",
]
